--- a/discord-manager/src/index.css
+++ b/discord-manager/src/index.css
@@ -85,6 +85,7 @@ body{
   color: var(--white);
   padding-left:10px;
   padding-right:10px;
+  overflow:hidden;
 }
 .img-header{
   border-radius: 50%;
@@ -660,7 +661,9 @@ td{
 }
 
 .slider{
+  position: relative;
   display: flex;
+  overflow:hidden;
   justify-content:space-between;
   transition: left 0.3;
 }
